DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2002-10-24 allenb   Fixed bugs in the DurationStatCollector and SampleCollector
                    where time and averages were being computed completely
                    wrong.
2002-09-19 patrickh Fixed a bug where vpr::Thread::msleep() could not sleep
                    for more than 1000 milliseconds.  The fix was submitted by
                    Chad Austin (aegisk@iastate.edu).
                    NEW VERSION: 0.18.1
2002-09-07 patrickh Added an abstraction for loading code at runtime.
                    NEW VERSION: 0.18.0
2002-08-19 allenb   Introduced indentation debugging output in Debug.cpp.
                    This output can/should be commented out before a major
                    release.
2002-08-14 patrickh Fixed major bugs in the readn implementation used by all
                    POSIX- and BSD-based I/O code.
                    NEW VERSION: 0.17.1
2002-08-02 patrickh Developer installations are now constructed using the
                    standard installation targets.
2002-06-23 patrickh The vpr-config script is now written in Perl.  It is
                    capable of determining its installation path at runtime.
2002-06-07 patrickh Moved the object serialization code from Plexus to VPR.
                    NEW VERSION: 0.16.0
2002-06-04 patrickh The process of making symlinks to juggler/external/boost
                    during the build process and of installing Boost has been
                    moved over to the juggler/external mini build system.
2002-05-31 patrickh Added vpr::InetAddr::getLocalHost().
                    NEW VERSION: 0.15.1
2002-05-30 allenb   Auto-register debug categories and changed the format of 
                    debug category objects.
                    This should help fix the long standing issues of startup 
                    intialization and ordering involved in the debug output 